v3.7.17 (XXXX-XX-XX)
--------------------

* Updated OpenSSL to 1.1.1m and OpenLDAP to 2.6.0.

* Set the limit for ArangoSearch segment size to 256MB during recovery to avoid
  OOM kill in rare cases.

* Fix GitHub issue #15084. Fixed a potential use-after-free on Windows for
  queries that used the NeighborsEnumerator (though other PathEnumerators might
  have been affected as well).
  
* Fixed BTS-611: In some cases AQL queries, in particular in a cluster, reported
  the wrong fullCount when the optimizer rule(s) `late-document-materialization`
  and/or `sort-limit` were active.

* Make `db.<collection>.figures(true)` operate on the same snapshot when
  counting the number of documents in the documents column family and the
  indexes. This ensures consistency for the results of a single figures result.


v3.7.16 (2021-11-23)
--------------------

* Improvements for getting-in-sync:
  Reuse the same DatabaseTailingSyncer instance for both the catchup (soft lock)
  and the exclusive (hard lock) phase. This allows the syncer to use the same
  syncer id with which it registers on the leader.
  Also make the leader return its current sequence number in "lastLogTick"
  attribute when the exclusive lock is acquired. This allows the follower to
  limit its WAL tailing efforts to only up to the sequence number that was
  returned by the leader.

* Improved sync protocol to commit after each chunk and get rid of the
  potentially dangerous NO_INDEXING optimization.

* Fixed an issue in old incremental sync protocol with document keys that
  contained special characters (`%`). These keys could be send unencoded in the
  incremental sync protocol, leading to wrong key ranges being transfered
  between leader and follower, and thus causing follow-up errors and preventing
  getting in sync.

* Fix issue #14819: Query: AQL: missing variable # for node #... location
  RestCursorHandler.cpp.

* Fix issues during rolling upgrades from 3.8.0 to 3.8.x (x >= 1) and from 3.7.x