@@ -162,6 +162,18 @@ void arangodb::aql::lateDocumentMaterializationRule(Optimizer* opt,
             // REMOTE node is a blocker - we do not want to make materialization calls across cluster!
             if (sortNode != nullptr) {
               stopSearch = true;
+            } else {
+              stickToSortNode = true;
+            }
+            break;
+          case ExecutionNode::LIMIT:
+            // After sort-limit rule was modified we could encounter additional
+            // limit nodes before Sort. Break search on them if still no sort
+            // found. As we need the closest LIMIT to the Sort. If we encounter
+            // additional LIMITs after we found a Sort node that is ok as it
+            // makes no harm for the late materialization.
+            if (sortNode == nullptr) {
+              stopSearch = true;
             }
             break;
           default: // make clang happy
@@ -291,9 +303,11 @@ void arangodb::aql::lateDocumentMaterializationRule(Optimizer* opt,
             plan.get(), plan->nextId(), indexNode->collection(), *localDocIdTmp, *var));
         TRI_ASSERT(materializeNode);
 
-        // on cluster we need to materialize node stay close to sort node on db server (to avoid network hop for materialization calls)
-        // however on single server we move it to limit node to make materialization as lazy as possible
-        auto* materializeDependency = ServerState::instance()->isCoordinator() || stickToSortNode ? sortNode : limitNode;
+        // on cluster we need to materialize node stay close to sort node on db
+        // server (to avoid network hop for materialization calls) however on
+        // single server we move it to limit node to make materialization as
+        // lazy as possible
+        auto* materializeDependency = stickToSortNode ? sortNode : limitNode;
         TRI_ASSERT(materializeDependency);
         auto* dependencyParent = materializeDependency->getFirstParent();
         TRI_ASSERT(dependencyParent);
