@@ -97,8 +97,18 @@ std::tuple<ExecutorState, NoStats, AqlCall> arangodb::aql::MaterializeExecutor<T
     TRI_ASSERT(collection != nullptr);
     _readDocumentContext._inputRow = &input;
     _readDocumentContext._outputRow = &output;
+
+    TRI_IF_FAILURE("MaterializeExecutor::all_fail") { continue; }
+
+    TRI_IF_FAILURE("MaterializeExecutor::only_one") {
+      if (output.numRowsWritten() > 0) {
+        continue;
+      }
+    }
+
     written = collection->readDocumentWithCallback(
         &_trx, LocalDocumentId(input.getValue(docRegId).slice().getUInt()), callback);
+
     if (written) {
       output.advanceRow();
     }
